syntax = "proto3";

package hello;

option go_package = "github.com/rpc-framework/core/proto/hello";

// HelloService 示例服务
service HelloService {
  // SayHello 简单的问候方法
  rpc SayHello(HelloRequest) returns (HelloResponse);
  
  // SayHelloStream 流式问候方法
  rpc SayHelloStream(HelloRequest) returns (stream HelloResponse);
  
  // SayHelloBidirectional 双向流式问候方法
  rpc SayHelloBidirectional(stream HelloRequest) returns (stream HelloResponse);
}

// HelloRequest 问候请求
message HelloRequest {
  string name = 1;
  string message = 2;
}

// HelloResponse 问候响应
message HelloResponse {
  string message = 1;
  int64 timestamp = 2;
}